--- a/public/10-1-vision-2.html
+++ b/public/10-1-vision-2.html
@@ -162,8 +162,13 @@
 				<div class="container-wide">
 					<div class="sHistory-wrap"> 
 						<!-- start sHistory-yell-->
-						<div class="head-wrapper">
-							<div class="row"> 
+						<div class="head-wrapper bg-wrap">
+							<picture class="picture-bg">
+								<!-- 992px-->
+								<source type="image/jpg" srcset="img/@2x/slide-sm.jpg" media="(min-width:992px)"/>
+								<!-- /992px --><img class="object-fit-js" src="img/@2x/slide-sm.jpg" alt=""/>
+							</picture>
+							<div class="row">
 								<div class="head-wrapper__col col-lg-6">
 									<h2>Придаём брендам человеческое лицо,</h2>
 									<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
