--- a/public/03-Service-2.html
+++ b/public/03-Service-2.html
@@ -136,6 +136,16 @@
 			</div>
 			<!-- end top-nav-->
 			<div class="main-slider main-slider--js swiper swiper--service">
+				<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+					<svg class="icon icon-chevron-left-btn ">
+						<use xlink:href="img/svg/sprite.svg#chevron-left-btn"></use>
+					</svg>
+				</div>
+				<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+					<svg class="icon icon-chevron-right-btn ">
+						<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+					</svg>
+				</div>
 				<div class="swiper-wrapper">
 					<div class="main-slider__slide swiper-slide">
 						<div class="main-slider__bg bg-wrap">
@@ -577,8 +587,6 @@
 								<li> <a href="mailto:info@ddvb.ru">info@ddvb.ru</a></li>
 								<li> <a href="tel:+74959160123">+7 (495) 916-01-23</a></li>
 							</ul>
-						</div>
-						<div class="col-12 col-lg-6 col-policy">
 							<a class="footer__policy" href="#">Политика конфиденциальности
 							</a>
 						</div>
