--- a/public/09-about-company.html
+++ b/public/09-about-company.html
@@ -137,50 +137,105 @@
 			<!-- end top-nav-->
 			<div class="page-head"> 
 				<div class="container">
+					<div class="breadcrumb-wrap">
+						<nav class="bread-slider-js swiper" aria-label="breadcrumb">
+							<ol class="breadcrumb swiper-wrapper" itemscope="itemscope" itemtype="http://schema.org/BreadcrumbList">
+								<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="/" itemprop="item"><span itemprop="name">Главная</span>
+										<meta itemprop="position" content="1"/></a></li>
+								<li class="breadcrumb-item swiper-slide" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">О компании</span>
+										<meta itemprop="position" content="2"/></a></li>
+								<li class="breadcrumb-item swiper-slide active" itemprop="itemListElement" itemscope="itemscope" itemtype="http://schema.org/ListItem"><a href="#" itemprop="item"><span itemprop="name">О компании</span>
+										<meta itemprop="position" content="3"/></a></li>
+							</ol>
+						</nav>
+					</div>
 					<h1>О компании</h1>
 				</div>
 			</div>
 			<!-- start sHistory-->
 			<div class="sHistory section" id="sHistory">
-				<div class="container">
-					<div class="head-wrapper">
-						<div class="row"> 
-							<div class="head-wrapper__col col-lg-6">
-								<h2>Придаём брендам человеческое лицо,</h2>
-								<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
+				<div class="main-slider main-slider--js swiper swiper--service">
+					<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+						<svg class="icon icon-chevron-left-btn ">
+							<use xlink:href="img/svg/sprite.svg#chevron-left-btn"></use>
+						</svg>
+					</div>
+					<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+						<svg class="icon icon-chevron-right-btn ">
+							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+						</svg>
+					</div>
+					<div class="swiper-wrapper">
+						<div class="main-slider__slide swiper-slide">
+							<div class="main-slider__bg bg-wrap">
+								<picture class="picture-bg">
+									<!-- 1920-->
+									<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+									<!-- /1920-->
+									<!-- 1280-->
+									<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+									<!-- /1280-->
+									<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+									<!-- /768-->
+								</picture>
 							</div>
-							<div class="col-lg-6">
-								<div class="head-wrapper__slider head-wrapper__slider--js swiper">
-									<div class="swiper-wrapper">
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
-										<div class="head-wrapper__slide swiper-slide" style="true">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
+							<div class="main-slider__inner">
+								<div class="container">
+									<div class="main-slider__text-wrap">
+										<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+										<p>Потребительский брендинг</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main-slider__slide swiper-slide">
+							<div class="main-slider__bg bg-wrap">
+								<picture class="picture-bg">
+									<!-- 1920-->
+									<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+									<!-- /1920-->
+									<!-- 1280-->
+									<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+									<!-- /1280-->
+									<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+									<!-- /768-->
+								</picture>
+							</div>
+							<div class="main-slider__inner">
+								<div class="container">
+									<div class="main-slider__text-wrap">
+										<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+										<p>Потребительский брендинг</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main-slider__slide swiper-slide">
+							<div class="main-slider__bg bg-wrap">
+								<picture class="picture-bg">
+									<!-- 1920-->
+									<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+									<!-- /1920-->
+									<!-- 1280-->
+									<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+									<!-- /1280-->
+									<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+									<!-- /768-->
+								</picture>
+							</div>
+							<div class="main-slider__inner">
+								<div class="container">
+									<div class="main-slider__text-wrap">
+										<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+										<p>Потребительский брендинг</p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+				<div class="container">
 					<p>Компания была основана в&nbsp;1993 году Леонидом Фейгиным и&nbsp;Дмитрием Перышковым в&nbsp;качестве дизайн-студии, но&nbsp;уже в&nbsp;скором времени успешно трансформировалась в&nbsp;полносервисное брендинговое агентство. Мы&nbsp;сыграли заметную роль в&nbsp;развитии индустрии брендинга в&nbsp;России, и&nbsp;продолжаем оставаться драйверами развития отрасли. На&nbsp;протяжении последних десятилетий мы&nbsp;работаем с&nbsp;лидерами российской экономики: бюджет наших клиентов формирует&nbsp;10% доходной части бюджета Российской Федерации.</p>
 					<p>Особая гордость&nbsp;&mdash; это команда, которая объединяет более 40&nbsp;сильных и&nbsp;амбициозных экспертов в&nbsp;области стратегии, дизайна и&nbsp;коммуникации. Это позволяет создавать нам разные брендинговые проекты: продуктовые, корпоративные, HR, территориальные и&nbsp;др.</p>
 					<p>DDVB входит в&nbsp;Ассоциацию брендинговых агентств России, регулярно получает призы на&nbsp;российских и&nbsp;международных фестивалях. Наши специалисты делятся опытом в&nbsp;ведущих учебных заведениях страны, входят в&nbsp;состав жюри, разрабатывают новые подходы в&nbsp;создании брендинга.</p>
@@ -428,8 +483,6 @@
 								<li> <a href="mailto:info@ddvb.ru">info@ddvb.ru</a></li>
 								<li> <a href="tel:+74959160123">+7 (495) 916-01-23</a></li>
 							</ul>
-						</div>
-						<div class="col-12 col-lg-6 col-policy">
 							<a class="footer__policy" href="#">Политика конфиденциальности
 							</a>
 						</div>
