--- a/public/index.html
+++ b/public/index.html
@@ -136,6 +136,16 @@
 			</div>
 			<!-- end top-nav-->
 			<div class="main-slider main-slider--js swiper">
+				<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+					<svg class="icon icon-chevron-left-btn ">
+						<use xlink:href="img/svg/sprite.svg#chevron-left-btn"></use>
+					</svg>
+				</div>
+				<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+					<svg class="icon icon-chevron-right-btn ">
+						<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+					</svg>
+				</div>
 				<div class="swiper-wrapper">
 					<div class="main-slider__slide swiper-slide">
 						<div class="main-slider__bg bg-wrap">
@@ -223,6 +233,10 @@
 			<div class="sServiceHead section">
 				<div class="container">
 					<div class="sServiceHead__row row">
+						<div class="col-12 order-md-last">
+							<p class="services-description-text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
+							</p>
+						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
 							<div class="services-goods"><span>5768</span><span>выполненных проектов</span>
 							</div>
@@ -238,10 +252,6 @@
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
 							<div class="services-goods services-goods--indent"><span>65</span><span>наград за&nbsp;проекты</span>
 							</div>
-						</div>
-						<div class="col-12">
-							<p class="services-description-text">Процесс создания брендов мы&nbsp;понимаем комплексно и&nbsp;можем взять на&nbsp;себя весь спектр работ&nbsp;&mdash; от&nbsp;проведения маркетинговых исследований до&nbsp;тестирования и&nbsp;реализации собственных творческих разработок.
-							</p>
 						</div>
 					</div>
 				</div>
@@ -445,8 +455,6 @@
 								<li> <a href="mailto:info@ddvb.ru">info@ddvb.ru</a></li>
 								<li> <a href="tel:+74959160123">+7 (495) 916-01-23</a></li>
 							</ul>
-						</div>
-						<div class="col-12 col-lg-6 col-policy">
 							<a class="footer__policy" href="#">Политика конфиденциальности
 							</a>
 						</div>
