--- a/public/09-about-company-5.html
+++ b/public/09-about-company-5.html
@@ -154,45 +154,88 @@
 			</div>
 			<!-- start sHistory-->
 			<div class="sHistory section" id="sHistory">
-				<div class="container">
-					<div class="head-wrapper">
-						<div class="row"> 
-							<div class="head-wrapper__col col-lg-6">
-								<h2>Придаём брендам человеческое лицо,</h2>
-								<p>помогая им&nbsp;адаптироваться и&nbsp;процветать в&nbsp;мире множества взаимосвязей</p>
+				<div class="main-slider main-slider--js swiper swiper--service">
+					<div class="swiper-button-hand swiper-button-hand-prev swiper-button-prev">
+						<svg class="icon icon-chevron-left-btn ">
+							<use xlink:href="img/svg/sprite.svg#chevron-left-btn"></use>
+						</svg>
+					</div>
+					<div class="swiper-button-hand swiper-button-hand-next swiper-button-next">
+						<svg class="icon icon-chevron-right-btn ">
+							<use xlink:href="img/svg/sprite.svg#chevron-right-btn"></use>
+						</svg>
+					</div>
+					<div class="swiper-wrapper">
+						<div class="main-slider__slide swiper-slide">
+							<div class="main-slider__bg bg-wrap">
+								<picture class="picture-bg">
+									<!-- 1920-->
+									<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+									<!-- /1920-->
+									<!-- 1280-->
+									<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+									<!-- /1280-->
+									<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+									<!-- /768-->
+								</picture>
 							</div>
-							<div class="col-lg-6">
-								<div class="head-wrapper__slider head-wrapper__slider--js swiper">
-									<div class="swiper-wrapper">
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
-										<div class="head-wrapper__slide swiper-slide" style="true">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
-										<div class="head-wrapper__slide swiper-slide">
-											<!-- picture-->
-											<picture> 
-												<source type="image/avif" srcset="img/@2x/avif/sHistory-bg.avif"/>
-												<source type="image/webp" srcset="img/@2x/webp/sHistory-bg.webp"/><img src="img/@2x/sHistory-bg.jpg" alt="" loading="lazy"/>
-											</picture>
-											<!-- /picture-->
-										</div>
+							<div class="main-slider__inner">
+								<div class="container">
+									<div class="main-slider__text-wrap">
+										<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+										<p>Потребительский брендинг</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main-slider__slide swiper-slide">
+							<div class="main-slider__bg bg-wrap">
+								<picture class="picture-bg">
+									<!-- 1920-->
+									<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+									<!-- /1920-->
+									<!-- 1280-->
+									<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+									<!-- /1280-->
+									<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+									<!-- /768-->
+								</picture>
+							</div>
+							<div class="main-slider__inner">
+								<div class="container">
+									<div class="main-slider__text-wrap">
+										<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+										<p>Потребительский брендинг</p>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="main-slider__slide swiper-slide">
+							<div class="main-slider__bg bg-wrap">
+								<picture class="picture-bg">
+									<!-- 1920-->
+									<source type="image/jpg" srcset="img/@2x/slide-lg-2.jpg" media="(min-width:1280px)"/>
+									<!-- /1920-->
+									<!-- 1280-->
+									<source type="image/jpg" srcset="img/@2x/slide-sm-2.jpg" media="(min-width:992px)"/>
+									<!-- /1280-->
+									<!-- 768--><img class="object-fit-js" src="img/@2x/slide-sm-2.jpg" alt=""/>
+									<!-- /768-->
+								</picture>
+							</div>
+							<div class="main-slider__inner">
+								<div class="container">
+									<div class="main-slider__text-wrap">
+										<div class="h1">Bakerton. Детское питание Сады Придонья: Расширение линейки</div>
+										<p>Потребительский брендинг</p>
 									</div>
 								</div>
 							</div>
 						</div>
 					</div>
+					<div class="swiper-pagination"></div>
+				</div>
+				<div class="container">
 					<p>DDVB насчитывает более 150 наград престижных конкурсов в&nbsp;области брендинга, дизайна и&nbsp;рекламы, а&nbsp;также ряда публикаций в&nbsp;профильных зарубежных СМИ.</p>
 				</div>
 			</div>
@@ -318,8 +361,6 @@
 								<li> <a href="mailto:info@ddvb.ru">info@ddvb.ru</a></li>
 								<li> <a href="tel:+74959160123">+7 (495) 916-01-23</a></li>
 							</ul>
-						</div>
-						<div class="col-12 col-lg-6 col-policy">
 							<a class="footer__policy" href="#">Политика конфиденциальности
 							</a>
 						</div>
