--- a/public/10-1-vision-2.html
+++ b/public/10-1-vision-2.html
@@ -251,7 +251,7 @@
 				</div>
 				<div class="container-wide">
 					<div class="vision-item-wrapp">
-						<div class="container">
+						<div class="container px-0">
 							<div class="row"> 
 								<div class="col"> 
 									<div class="span-wrapper"> <span>Наш подход</span></div>
