--- a/public/10-1-vision.html
+++ b/public/10-1-vision.html
@@ -180,7 +180,7 @@
 				</div>
 				<div class="container-wide">
 					<div class="vision-item-wrapp">
-						<div class="container">
+						<div class="container px-0">
 							<div class="row"> 
 								<div class="col"> 
 									<div class="span-wrapper"> <span>Наш подход</span></div>
