--- a/public/14-search-4.html
+++ b/public/14-search-4.html
@@ -170,8 +170,8 @@
 			<div class="sSearchServices section" id="sSearchServices">
 				<div class="container">
 					<div class="dd-group dd-group-js">
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
+						<div class="dd-group__item active">
+							<div class="dd-group__head">
 								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
@@ -184,7 +184,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="dd-group__content dd-content-js">
+							<div class="dd-group__content dd-content-js active">
 								<ul>
 									<li>
 										<p>Собираем и анализируем информацию</p>
@@ -201,8 +201,8 @@
 								</ul>
 							</div>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
+						<div class="dd-group__item active">
+							<div class="dd-group__head">
 								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
@@ -215,7 +215,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="dd-group__content dd-content-js">
+							<div class="dd-group__content dd-content-js active">
 								<ul>
 									<li>
 										<p>Собираем и анализируем информацию</p>
@@ -232,8 +232,8 @@
 								</ul>
 							</div>
 						</div>
-						<div class="dd-group__item">
-							<div class="dd-group__head dd-head-js">
+						<div class="dd-group__item active">
+							<div class="dd-group__head">
 								<div class="dd-group__row row">
 									<div class="col">
 										<div class="dd-group__wrraper">
@@ -246,7 +246,7 @@
 									</div>
 								</div>
 							</div>
-							<div class="dd-group__content dd-content-js">
+							<div class="dd-group__content dd-content-js active">
 								<ul>
 									<li>
 										<p>Собираем и анализируем информацию</p>
@@ -420,6 +420,8 @@
 		<!-- #modal-call-->
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
+		<script src="js/jquery.waypoints.min.js"></script>
+		<script src="js/waypoint.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"></script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
