--- a/public/index.html
+++ b/public/index.html
@@ -228,19 +228,19 @@
 							</p>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods"><span>5768</span><span>выполненных проектов</span>
+							<div class="services-goods"><span class="number-js" data-number="5768">0</span><span>выполненных проектов</span>
 							</div>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods"><span>668</span><span>довольных клиентов</span>
+							<div class="services-goods"><span class="number-js" data-number="668">0</span><span>довольных клиентов</span>
 							</div>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods"><span>34</span><span>светлейших головы</span>
+							<div class="services-goods"><span class="number-js" data-number="34">0</span><span>светлейших головы</span>
 							</div>
 						</div>
 						<div class="col-sm-6 col-lg-4 col-xl-auto">
-							<div class="services-goods services-goods--indent"><span>65</span><span>наград за&nbsp;проекты</span>
+							<div class="services-goods services-goods--indent"><span class="number-js" data-number="65">0</span><span>наград за&nbsp;проекты</span>
 							</div>
 						</div>
 					</div>
@@ -551,6 +551,8 @@
 		<!-- #modal-call-->
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
+		<script src="js/jquery.waypoints.min.js"></script>
+		<script src="js/waypoint.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"></script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
