--- a/public/09-about-company-2.html
+++ b/public/09-about-company-2.html
@@ -162,144 +162,146 @@
 				</div>
 				<div class="container-wide">
 					<div class="container">
-						<ul class="sAwards__company-list">
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-1.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-1.webp"/><img src="img/@2x/awards-img-1.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-2.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-2.webp"/><img src="img/@2x/awards-img-2.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-3.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-3.webp"/><img src="img/@2x/awards-img-3.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-4.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-4.webp"/><img src="img/@2x/awards-img-4.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-5.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-5.webp"/><img src="img/@2x/awards-img-5.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-6.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-6.webp"/><img src="img/@2x/awards-img-6.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-7.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-7.webp"/><img src="img/@2x/awards-img-7.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-8.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-8.webp"/><img src="img/@2x/awards-img-8.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-9.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-9.webp"/><img src="img/@2x/awards-img-9.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-10.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-10.webp"/><img src="img/@2x/awards-img-10.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-11.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-11.webp"/><img src="img/@2x/awards-img-11.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-12.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-12.webp"/><img src="img/@2x/awards-img-12.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-13.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-13.webp"/><img src="img/@2x/awards-img-13.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-14.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-14.webp"/><img src="img/@2x/awards-img-14.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-15.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-15.webp"/><img src="img/@2x/awards-img-15.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-16.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-16.webp"/><img src="img/@2x/awards-img-16.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-							<li class="sAwards__item"> 
-								<!-- picture-->
-								<picture> 
-									<source type="image/avif" srcset="img/@2x/avif/awards-img-17.avif"/>
-									<source type="image/webp" srcset="img/@2x/webp/awards-img-17.webp"/><img src="img/@2x/awards-img-17.jpg" alt="" loading="lazy"/>
-								</picture>
-								<!-- /picture-->
-							</li>
-						</ul>
+						<div class="sAwards__company-list">
+							<div class="row">
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-1.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-1.webp"/><img src="img/@2x/awards-img-1.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-2.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-2.webp"/><img src="img/@2x/awards-img-2.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-3.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-3.webp"/><img src="img/@2x/awards-img-3.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-4.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-4.webp"/><img src="img/@2x/awards-img-4.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-5.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-5.webp"/><img src="img/@2x/awards-img-5.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-6.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-6.webp"/><img src="img/@2x/awards-img-6.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-7.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-7.webp"/><img src="img/@2x/awards-img-7.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-8.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-8.webp"/><img src="img/@2x/awards-img-8.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-9.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-9.webp"/><img src="img/@2x/awards-img-9.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-10.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-10.webp"/><img src="img/@2x/awards-img-10.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-11.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-11.webp"/><img src="img/@2x/awards-img-11.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-12.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-12.webp"/><img src="img/@2x/awards-img-12.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-13.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-13.webp"/><img src="img/@2x/awards-img-13.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-14.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-14.webp"/><img src="img/@2x/awards-img-14.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-15.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-15.webp"/><img src="img/@2x/awards-img-15.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-16.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-16.webp"/><img src="img/@2x/awards-img-16.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+								<div class="sAwards__item col-sm-auto col-6"> 
+									<!-- picture-->
+									<picture> 
+										<source type="image/avif" srcset="img/@2x/avif/awards-img-17.avif"/>
+										<source type="image/webp" srcset="img/@2x/webp/awards-img-17.webp"/><img src="img/@2x/awards-img-17.jpg" alt="" loading="lazy"/>
+									</picture>
+									<!-- /picture-->
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -496,6 +498,8 @@
 		<!-- #modal-call-->
 		<!-- end modals-->
 		<script src="libs/jquery/jquery.min.js"></script>
+		<script src="js/jquery.waypoints.min.js"></script>
+		<script src="js/waypoint.js"></script>
 		<script src="libs/@fancyapps/ui/fancybox.umd.js"> </script>
 		<script src="libs/swiper/swiper-bundle.min.js"></script>
 		<script src="libs/inputmask/inputmask.min.js"> </script>
